[package]
name = "LeetspeakGen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
indicatif = "0.17.0"
clipboard = "0.5.0"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
